[gd_scene load_steps=3 format=3 uid="uid://bhfg5j32fhw7l"]

[ext_resource type="Script" uid="uid://cvv4pcqecsxja" path="res://scripts/ui/main_menu.gd" id="1_t7e0r"]

[sub_resource type="Theme" id="Theme_gl0q7"]
VBoxContainer/constants/separation = 4

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e0r")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_gl0q7")
theme_override_constants/separation = 10

[node name="CastleGuard" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Castle Guard"

[node name="Maria" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Maria"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CastleGuard" to="." method="_on_castle_guard_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Maria" to="." method="_on_maria_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
